--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,6 +60,10 @@
     @apply absolute left-28 top-5;
   }
 
+  .login-error {
+    @apply bg-red-400 w-1/3 mx-auto font-extrabold text-center px-2 py-3 rounded text-black;
+  }
+
   .create-post div label {
     @apply font-extrabold text-xl mt-4;
   }
