--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,7 +130,7 @@
   }
 
   .icon {
-    @apply p-4 text-white text-3xl bg-green-500 mx-4 my-4 rounded-3xl hover:rounded-xl cursor-pointer hover:bg-white hover:text-green-500 transition-all duration-300;
+    @apply p-3 text-white text-3xl bg-green-500 mx-4 my-4 rounded-full hover:rounded-3xl cursor-pointer hover:bg-white hover:text-green-500 transition-all duration-300;
   }
 
   .register-form {
